--- a/app/src/main/res/layout/activity_crime.xml
+++ b/app/src/main/res/layout/activity_crime.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.developgmail.mitroshin.criminalintent.MainActivity">
+    tools:context="com.developgmail.mitroshin.criminalintent.CrimeActivity">
 
     <TextView
         android:layout_width="wrap_content"
