--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -33,7 +33,7 @@
         android:layout_marginRight="16dp"/>
 
     <CheckBox
-        android:id="@+id/crime_solve"
+        android:id="@+id/crime_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
