--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -25,12 +25,6 @@
         android:text="@string/crime_details_label"
         style="?android:listSeparatorTextViewStyle"/>
 
-    <Button
-        android:id="@+id/crime_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -40,17 +34,17 @@
         android:layout_marginLeft="16dp">
 
         <Button
-            android:id="@+id/crime_time"
-            android:layout_width="wrap_content"
+            android:id="@+id/crime_date"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
-        <CheckBox
-            android:id="@+id/crime_solved"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/crime_time"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_solved_label"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -62,17 +56,39 @@
 
         <Button
             android:id="@+id/crime_suspect"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/crime_suspect_text"/>
+
+        <ImageButton
+            android:id="@+id/call_to_suspect"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_suspect_text"
-            android:layout_weight="1"/>
+            android:layout_weight="2"
+            android:src="@drawable/ic_call_to_suspect"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp">
 
         <Button
             android:id="@+id/crime_report"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/crime_report_text"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            android:layout_weight="1"
+            android:text="@string/crime_report_text"/>
 
+        <CheckBox
+            android:id="@+id/crime_solved"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/crime_solved_label"
+            android:layout_weight="2"/>
+    </LinearLayout>
 </LinearLayout>
