--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -39,27 +39,50 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"/>
 
-    <CheckBox
-        android:id="@+id/crime_solved"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_solved_label"/>
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/crime_suspect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/crime_suspect_text"/>
+        <Button
+            android:id="@+id/crime_suspect"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingEnd="8dp"
+            android:text="@string/crime_suspect_text"/>
 
-    <Button
-        android:id="@+id/crime_report"
+        <ImageButton
+            android:id="@+id/call_to_suspect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:paddingStart="8dp"
+            android:src="@drawable/ic_call_to_suspect"/>
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:text="@string/crime_report_text"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/crime_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/crime_report_text"
+            android:layout_weight="1"/>
+
+        <CheckBox
+            android:id="@+id/crime_solved"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/crime_solved_label"
+            android:layout_weight="3"/>
+    </LinearLayout>
 </LinearLayout>
